--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "homepage": "https://github.com/comp426-2022-spring/a05-johnmar3#readme",
   "dependencies": {
     "better-sqlite3": "^7.5.1",
-    "express": "^4.17.3",
+    "express": "^4.18.1",
+    "fs": "^0.0.1-security",
     "minimist": "^1.2.6",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15"
